--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "**/*.mts",
     "**/*.ts",
     "**/*.tsx"
-, "src/app/(auth)/server/route.js"  ],
+, "src/app/(auth)/server/route.ts"  ],
   "exclude": ["node_modules"]
 }
