--- a/components.json
+++ b/components.json
@@ -22,6 +22,7 @@
     "@react-bits": "https://reactbits.dev/r/{name}.json",
     "@magicui": "https://magicui.design/r/{name}.json",
     "@ncdai": "https://chanhdai.com/r/{name}.json",
-    "@aceternity": "https://ui.aceternity.com/registry/{name}.json"
+    "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
+    "@soundcn": "https://soundcn.xyz/r/{name}.json"
   }
 }
